01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-lab
  labels:
    project: redis-lab
