04-service-redis-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-db-headless
  namespace: redis-lab
spec:
  clusterIP: None
  selector:
    app: redis-db
  ports:
    - port: 6379
      targetPort: 6379
