05-service-redis-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-db
  namespace: redis-lab
spec:
  selector:
    app: redis-db
  ports:
    - port: 6379
      targetPort: 6379
