06-service-redisinsight.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: redis-lab
spec:
  selector:
    app: redisinsight
  ports:
    - port: 80
      targetPort: 5540
