07-service-nginx-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: redis-lab
spec:
  selector:
    app: nginx-proxy
  ports:
    - port: 80
      targetPort: 80
